--- a/imagenflask/templates/account.html
+++ b/imagenflask/templates/account.html
@@ -1,12 +1,45 @@
 {% extends "layout.html" %}
 {% block content %}
+<header class="site-header">
+    <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+      <div class="container">
+        <a class="navbar-brand mr-4" href="/">Materials Informatics</a>
+        <!--<a class="navbar-brand mr-4" href="/">Materials Informatics</a>-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggle">
+          <div class="navbar-nav mr-auto">
+            <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+            <a class="nav-item nav-link" href="{{ url_for('data') }}">Data</a>
+            <a class="nav-item nav-link" href="{{ url_for('res') }}">Resources</a>
+            <a class="nav-item nav-link" href="{{ url_for('blog') }}">Blog</a>
+            <a class="nav-item nav-link" href="{{ url_for('forum') }}">Forum</a>
+            <a class="nav-item nav-link" href="{{ url_for('team') }}">Team</a>
+          </div>
+          <!-- Navbar Right Side -->
+          <div class="navbar-nav">
+            {% if loggedin %}
+              <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
+              <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+              <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+            {% else %}
+              <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+              <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+            {% endif %}
+          </div>
+        </div>
+      </div> 
+    </nav>
+  </header>
+
     <div class="content-section">
       <div class="media">
         <img class="rounded-circle account-img" src="{{ image }}">
         <div class="media-body">
-          <h2 class="account-heading">{{ current_user.username }}</h2>
-          <h4>{{ current_user.affiliation }}</h4>
-          <p class="text-secondary">{{ current_user.email }}</p>
+          <h2 class="account-heading">{{ form.username.data }}</h2>
+          <h4>{{ form.affiliation.data }}</h4>
+          <p class="text-secondary">{{ form.email.data }}</p>
         </div>
       </div>
         <form method="POST" action="" enctype="multipart/form-data">
