--- a/imagenflask/templates/forum.html
+++ b/imagenflask/templates/forum.html
@@ -1,19 +1,39 @@
 {% extends "layout.html" %}
 {% block content %}
+<header class="site-header">
+    <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+      <div class="container">
+        <a class="navbar-brand mr-4" href="/">Materials Informatics</a>
+        <!--<a class="navbar-brand mr-4" href="/">Materials Informatics</a>-->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggle">
+          <div class="navbar-nav mr-auto">
+            <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+            <a class="nav-item nav-link" href="{{ url_for('data') }}">Data</a>
+            <a class="nav-item nav-link" href="{{ url_for('res') }}">Resources</a>
+            <a class="nav-item nav-link" href="{{ url_for('blog') }}">Blog</a>
+            <a class="nav-item nav-link" href="{{ url_for('forum') }}">Forum</a>
+            <a class="nav-item nav-link" href="{{ url_for('team') }}">Team</a>
+          </div>
+          <!-- Navbar Right Side -->
+          <div class="navbar-nav">
+            {% if loggedin %}
+              <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
+              <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
+              <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+            {% else %}
+              <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+              <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+            {% endif %}
+          </div>
+        </div>
+      </div> 
+    </nav>
+  </header>
 	<article class="media content-section">
-		<!--<iframe id="forum_embed"
-		  src="javascript:void(0)"
-		  scrolling="no"
-		  frameborder="0"
-		  width="704"
-		  height="804">
-		</iframe>
-		<script type="text/javascript">
-		  document.getElementById('forum_embed').src =
-		     'http://groups.google.com/forum/embed/?place=forum/flasktestiitb/'
-		     + '&showsearch=true&showpopout=true&showtabs=false'
-		     + '&parenturl=' + encodeURIComponent(window.location.href);
-		</script>-->
+		</script>
 <system.webServer>
      <httpProtocol allowKeepAlive="true" >
        <customHeaders>
@@ -22,128 +42,8 @@
      </httpProtocol>
  </system.webServer>
 		<center>
-			<!--<iframe id="forum_embed" 
- src="javascript:void(0)" 
- scrolling="no" 
- frameborder="0" 
- width="704" 
- height="804" importance="high" > 
-</iframe> 
-<script type="text/javascript"> 
- document.getElementById("forum_embed").src = 
-  "http://groups.google.com/forum/embed/?place=forum/flasktestiitb" +
-  "&amp;showsearch=true&amp;showpopout=true&amp&showtabs=false;parenturl=" +
-encodeURIComponent(window.location.href); 
-</script>-->
 <iframe id="forum_embed" src="https://groups.google.com/forum/embed/?place=forum/flasktestiitb#!forum/flasktestiitb" scrolling="no" frameborder="0" width="704" height="804"></iframe>
 		</center>
-
-			<!--<iframe scrolling="no" frameborder="0" width="704" height="804" src="http://flaskiitbtest.forumotion.com"></iframe></center>-->
-
-
-		<!--Firefox-->
-		<!--<iframe id="forum_embed" 
- src="javascript:void(0)" 
- scrolling="no" 
- frameborder="0" 
- width="704" 
- height="704" importance="high" > 
-</iframe> 
-<script type="text/javascript"> 
- document.getElementById("forum_embed").src = 
-  "http://groups.google.com/forum/embed/?place=forum/flasktestiitb" +
-  "&amp;showsearch=true&amp;showpopout=true&amp&showtabs=false;parenturl=" +
-encodeURIComponent(window.location.href); 
-</script><br>-->
-<!--Chrome<iframe id="forum_embed" 
- src="javascript:void(0)" 
- scrolling="no" 
- frameborder="0" 
- width="704" 
- height="704" importance="high" > 
-</iframe> 
-<script type="text/javascript"> 
- document.getElementById('forum_embed').src =
- 'http://groups.google.com/forum/embed/?place=forum/flasktestiitb'
- + '&showsearch=true&showpopout=true&showtabs=false'
- + '&parenturl=' + encodeURIComponent(window.location.href);
-</script>-->
-	</article>
-
-	<!--<<div>
-
-
-	 <iframe id="forum_embed"
-        src="javascript:void(0)"
-        scrolling="no"
-        frameborder="0"
-        width="900"
-        height="700">
-  </iframe>
-  <script type="text/javascript">
-   document.getElementById('forum_embed').src =
- 'https://groups.google.com/forum/embed/?place=forum/test-distance'
- + '&showsearch=true&showpopout=true&showtabs=false'
- + '&parenturl=' + encodeURIComponent(window.location.href);
-  </script>
-  </div>
-
-
-
-		<iframe id="forum_embed"
-              src="javascript:void(0)"
-              scrolling="no"
-              frameborder="0">
-      </iframe>
-  iframe id="forum_embed"
-        src="javascript:void(0)"
-        scrolling="no"
-        frameborder="0"
-        width="704"
-        height="1000"
-        >
-  </iframe>
-  <script type="text/javascript">
-   document.getElementById('forum_embed').src =
- 'https://groups.google.com/forum/#!forum/flasktestiitb'
- + '&showsearch=true&showpopout=true&showtabs=false'
- + '&parenturl=' + encodeURIComponent(window.location.href);
-  </script>
-  </div>-->
-	<!--<iframe
-
-		https://groups.google.com/forum/#!forum/flasktestiitb
-
-	  src="https://pranoyflask.tribe.so/embed/home?components=feed&feedLimit=10"
-	  frameborder="0"
-	  width="704" height="1500"
-	  style="min-height: 300px; width: 100%;" 
-	  allowtransparency="true">
-	</iframe>-->
-		<!--<article class="media content-section">
-		<iframe width="704" height="400" src="https://www.youtube.com/embed/tElbqV4_IUs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</article>
-	<article class="media content-section">
-	<iframe width="704" height="400" src="https://www.youtube.com/embed/XidWMz3z7I4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</article>
-		<article class="media content-section">
-		<iframe width="704" height="400" src="https://www.youtube.com/embed/saeFQNThCGQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</article>
-	<article class="media content-section">
-			<iframe sandbox src="https://www.me.iitb.ac.in/~alankar/publications.html" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</article>
-
-	
-		<article class="media content-section">
-			<iframe sandbox src="https://www.linkedin.com/embed/feed/update/urn:li:share:6693748887628390400" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</article>
-		<article class="media content-section">
-			<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6479359946197700608" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</article>
-		<article class="media content-section">
-			<iframe src="https://pranoyflask.tribe.so/D" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</article>-->
-
-	 
+	</article>	 
 {% endblock content %}
 
